--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "buefy": "^0.7.1",
+    "bulma": "^0.7.2",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-buefy": "^0.3.2",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
